Criação do Layout básico da página

--- a/index.html
+++ b/index.html
@@ -9,6 +9,21 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <header>
+        <p>SCUTUM</p>
+        <img src="imagens/shield.png" alt="icon">
+    </header>
+    <main>
+    </main>
+    <footer>
+        <p class="footerP">Banco Scutum, 2022 </br>
+            Banco Scutum nas Redes Sociais:
+        </p> 
+        <div>
+            <a href="https://facebook.com" target="_blank"><img src="imagens/face.png" alt="icon"></a>
+            <a href="https://instagram.com" target="_blank"><img src="imagens/instagram.png" alt="icon"></a>
+            <a href="https://twitter.com" target="_blank"><img src="imagens/twitter.png" alt="icon"></a>
+        </div>
+    </footer>
 </body>
 </html>
