--- a/index.html
+++ b/index.html
@@ -14,6 +14,23 @@
         <img src="imagens/shield.png" alt="icon">
     </header>
     <main>
+        <h1>CADASTRO</h1>
+        <section class="form">
+            <label for="name">Nome:</label>
+            <input type="text" name="name" id="name">
+            <label for="cpf">CPF:</label>
+            <input type="text" name="cpf" id="cpf">
+            <label for="tel">Telefone:</label>
+            <input type="tel" name="tel" id="tel">
+            <label for="password">Senha:</label>
+            <input type="password" name="password" id="password"> 
+            <label for="passConf">Confirmar Senha:</label>
+            <input type="password" name="passConf" id="passConf">
+            <div class="buttons"> 
+                <input type="button" class="btnCad" value="Cadastrar">
+                <input type="button" class="btnLimpar" value="Limpar">
+            </div>
+        </section>
     </main>
     <footer>
         <p class="footerP">Banco Scutum, 2022 </br>
