[M1S04] Ex 4 - Criação do formulário de cadastro - Funcionalidades [Conta bancária]

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Scutum - Conta Bancária</title>
-    <script src="./app.js" type="module" defer></script>
+    <script src="./js/main.js" defer type="module"></script>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -15,7 +15,7 @@
     </header>
     <main>
         <h1>CADASTRO</h1>
-        <section class="form">
+        <section class="form" id="form">
             <label for="name">Nome:</label>
             <input type="text" name="name" id="name">
             <label for="cpf">CPF:</label>
@@ -27,9 +27,10 @@
             <label for="passConf">Confirmar Senha:</label>
             <input type="password" name="passConf" id="passConf">
             <div class="buttons"> 
-                <input type="button" class="btnCad" value="Cadastrar">
+                <input type="button" class="btnCad" id="btnCad" value="Cadastrar">
                 <input type="button" class="btnLimpar" value="Limpar">
             </div>
+            <div class="alert" id="alert"></div>
         </section>
     </main>
     <footer>
