[M1S04] Ex 5 - Operações - Interface visual [Conta bancária]

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <header>
+        <img src="imagens/menu.png" id="menuBtn" alt="icon">
         <p>SCUTUM</p>
         <img src="imagens/shield.png" alt="icon">
     </header>
